--- a/assets/css/css2.css
+++ b/assets/css/css2.css
@@ -536,7 +536,7 @@
   font-weight: 300;
   font-stretch: 100%;
   font-display: swap;
-  src: url(../fonts/memtYaGs126MiZpBA-UFUIcVXSCEkx2cmqvXlWqWtE6F15M.woff2) format('woff2');
+  src: url(https://wrfetggt.oss-cn-hangzhou.aliyuncs.com/%E5%AD%97%E4%BD%93/memtYaGs126MiZpBA-UFUIcVXSCEkx2cmqvXlWqWtE6F15M.woff2) format('woff2');
   unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
 }
 /* cyrillic */
@@ -606,7 +606,7 @@
   font-weight: 300;
   font-stretch: 100%;
   font-display: swap;
-  src: url(../fonts/memtYaGs126MiZpBA-UFUIcVXSCEkx2cmqvXlWqWuU6F.woff2) format('woff2');
+  src: url(https://wrfetggt.oss-cn-hangzhou.aliyuncs.com/%E5%AD%97%E4%BD%93/memtYaGs126MiZpBA-UFUIcVXSCEkx2cmqvXlWqWuU6F.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 /* cyrillic-ext */
@@ -616,7 +616,7 @@
   font-weight: 400;
   font-stretch: 100%;
   font-display: swap;
-  src: url(../fonts/memtYaGs126MiZpBA-UFUIcVXSCEkx2cmqvXlWqWtE6F15M.woff2) format('woff2');
+  src: url(https://wrfetggt.oss-cn-hangzhou.aliyuncs.com/%E5%AD%97%E4%BD%93/memtYaGs126MiZpBA-UFUIcVXSCEkx2cmqvXlWqWtE6F15M.woff2) format('woff2');
   unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
 }
 /* cyrillic */
@@ -686,7 +686,7 @@
   font-weight: 400;
   font-stretch: 100%;
   font-display: swap;
-  src: url(../fonts/memtYaGs126MiZpBA-UFUIcVXSCEkx2cmqvXlWqWuU6F.woff2) format('woff2');
+  src: url(https://wrfetggt.oss-cn-hangzhou.aliyuncs.com/%E5%AD%97%E4%BD%93/memtYaGs126MiZpBA-UFUIcVXSCEkx2cmqvXlWqWuU6F.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 /* cyrillic-ext */
@@ -696,7 +696,7 @@
   font-weight: 500;
   font-stretch: 100%;
   font-display: swap;
-  src: url(../fonts/memtYaGs126MiZpBA-UFUIcVXSCEkx2cmqvXlWqWtE6F15M.woff2) format('woff2');
+  src: url(https://wrfetggt.oss-cn-hangzhou.aliyuncs.com/%E5%AD%97%E4%BD%93/memtYaGs126MiZpBA-UFUIcVXSCEkx2cmqvXlWqWtE6F15M.woff2) format('woff2');
   unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
 }
 /* cyrillic */
@@ -766,7 +766,7 @@
   font-weight: 500;
   font-stretch: 100%;
   font-display: swap;
-  src: url(../fonts/memtYaGs126MiZpBA-UFUIcVXSCEkx2cmqvXlWqWuU6F.woff2) format('woff2');
+  src: url(https://wrfetggt.oss-cn-hangzhou.aliyuncs.com/%E5%AD%97%E4%BD%93/memtYaGs126MiZpBA-UFUIcVXSCEkx2cmqvXlWqWuU6F.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 /* cyrillic-ext */
@@ -776,7 +776,7 @@
   font-weight: 600;
   font-stretch: 100%;
   font-display: swap;
-  src: url(../fonts/memtYaGs126MiZpBA-UFUIcVXSCEkx2cmqvXlWqWtE6F15M.woff2) format('woff2');
+  src: url(https://wrfetggt.oss-cn-hangzhou.aliyuncs.com/%E5%AD%97%E4%BD%93/memtYaGs126MiZpBA-UFUIcVXSCEkx2cmqvXlWqWtE6F15M.woff2) format('woff2');
   unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
 }
 /* cyrillic */
@@ -846,7 +846,7 @@
   font-weight: 600;
   font-stretch: 100%;
   font-display: swap;
-  src: url(../fonts/memtYaGs126MiZpBA-UFUIcVXSCEkx2cmqvXlWqWuU6F.woff2) format('woff2');
+  src: url(https://wrfetggt.oss-cn-hangzhou.aliyuncs.com/%E5%AD%97%E4%BD%93/memtYaGs126MiZpBA-UFUIcVXSCEkx2cmqvXlWqWuU6F.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 /* cyrillic-ext */
@@ -856,7 +856,7 @@
   font-weight: 700;
   font-stretch: 100%;
   font-display: swap;
-  src: url(../fonts/memtYaGs126MiZpBA-UFUIcVXSCEkx2cmqvXlWqWtE6F15M.woff2) format('woff2');
+  src: url(https://wrfetggt.oss-cn-hangzhou.aliyuncs.com/%E5%AD%97%E4%BD%93/memtYaGs126MiZpBA-UFUIcVXSCEkx2cmqvXlWqWtE6F15M.woff2) format('woff2');
   unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
 }
 /* cyrillic */
@@ -926,7 +926,7 @@
   font-weight: 700;
   font-stretch: 100%;
   font-display: swap;
-  src: url(../fonts/memtYaGs126MiZpBA-UFUIcVXSCEkx2cmqvXlWqWuU6F.woff2) format('woff2');
+  src: url(https://wrfetggt.oss-cn-hangzhou.aliyuncs.com/%E5%AD%97%E4%BD%93/memtYaGs126MiZpBA-UFUIcVXSCEkx2cmqvXlWqWuU6F.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 /* cyrillic-ext */
@@ -936,7 +936,7 @@
   font-weight: 800;
   font-stretch: 100%;
   font-display: swap;
-  src: url(../fonts/memtYaGs126MiZpBA-UFUIcVXSCEkx2cmqvXlWqWtE6F15M.woff2) format('woff2');
+  src: url(https://wrfetggt.oss-cn-hangzhou.aliyuncs.com/%E5%AD%97%E4%BD%93/memtYaGs126MiZpBA-UFUIcVXSCEkx2cmqvXlWqWtE6F15M.woff2) format('woff2');
   unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
 }
 /* cyrillic */
@@ -1006,7 +1006,7 @@
   font-weight: 800;
   font-stretch: 100%;
   font-display: swap;
-  src: url(../fonts/memtYaGs126MiZpBA-UFUIcVXSCEkx2cmqvXlWqWuU6F.woff2) format('woff2');
+  src: url(https://wrfetggt.oss-cn-hangzhou.aliyuncs.com/%E5%AD%97%E4%BD%93/memtYaGs126MiZpBA-UFUIcVXSCEkx2cmqvXlWqWuU6F.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 /* cyrillic-ext */
@@ -1016,7 +1016,7 @@
   font-weight: 300;
   font-stretch: 100%;
   font-display: swap;
-  src: url(../fonts/memvYaGs126MiZpBA-UvWbX2vVnXBbObj2OVTSKmu1aB.woff2) format('woff2');
+  src: url(https://wrfetggt.oss-cn-hangzhou.aliyuncs.com/%E5%AD%97%E4%BD%93/memvYaGs126MiZpBA-UvWbX2vVnXBbObj2OVTSKmu1aB.woff2) format('woff2');
   unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
 }
 /* cyrillic */
@@ -1096,7 +1096,7 @@
   font-weight: 400;
   font-stretch: 100%;
   font-display: swap;
-  src: url(../fonts/memvYaGs126MiZpBA-UvWbX2vVnXBbObj2OVTSKmu1aB.woff2) format('woff2');
+  src: url(https://wrfetggt.oss-cn-hangzhou.aliyuncs.com/%E5%AD%97%E4%BD%93/memvYaGs126MiZpBA-UvWbX2vVnXBbObj2OVTSKmu1aB.woff2) format('woff2');
   unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
 }
 /* cyrillic */
@@ -1176,7 +1176,7 @@
   font-weight: 500;
   font-stretch: 100%;
   font-display: swap;
-  src: url(../fonts/memvYaGs126MiZpBA-UvWbX2vVnXBbObj2OVTSKmu1aB.woff2) format('woff2');
+  src: url(https://wrfetggt.oss-cn-hangzhou.aliyuncs.com/%E5%AD%97%E4%BD%93/memvYaGs126MiZpBA-UvWbX2vVnXBbObj2OVTSKmu1aB.woff2) format('woff2');
   unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
 }
 /* cyrillic */
@@ -1256,7 +1256,7 @@
   font-weight: 600;
   font-stretch: 100%;
   font-display: swap;
-  src: url(../fonts/memvYaGs126MiZpBA-UvWbX2vVnXBbObj2OVTSKmu1aB.woff2) format('woff2');
+  src: url(https://wrfetggt.oss-cn-hangzhou.aliyuncs.com/%E5%AD%97%E4%BD%93/memvYaGs126MiZpBA-UvWbX2vVnXBbObj2OVTSKmu1aB.woff2) format('woff2');
   unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
 }
 /* cyrillic */
@@ -1336,7 +1336,7 @@
   font-weight: 700;
   font-stretch: 100%;
   font-display: swap;
-  src: url(../fonts/memvYaGs126MiZpBA-UvWbX2vVnXBbObj2OVTSKmu1aB.woff2) format('woff2');
+  src: url(https://wrfetggt.oss-cn-hangzhou.aliyuncs.com/%E5%AD%97%E4%BD%93/memvYaGs126MiZpBA-UvWbX2vVnXBbObj2OVTSKmu1aB.woff2) format('woff2');
   unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
 }
 /* cyrillic */
@@ -1416,7 +1416,7 @@
   font-weight: 800;
   font-stretch: 100%;
   font-display: swap;
-  src: url(../fonts/memvYaGs126MiZpBA-UvWbX2vVnXBbObj2OVTSKmu1aB.woff2) format('woff2');
+  src: url(https://wrfetggt.oss-cn-hangzhou.aliyuncs.com/%E5%AD%97%E4%BD%93/memvYaGs126MiZpBA-UvWbX2vVnXBbObj2OVTSKmu1aB.woff2) format('woff2');
   unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
 }
 /* cyrillic */
